07/demos/moduralizing-an-apps-configuration/config/after/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
spec:
  ingressClassName: nginx
  rules:
  - host: 192-168-39-200.nip.io
    http:
      paths:
      - backend:
          service:
            name: todo
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
